no longer have to restart for change in IMAP synch with subscribed folders
setting.

added support for IMAP shared folders.

fixed the StoreInfo so that we now properly use the custom port for
IMAP/SSL.

fixed the FullMailcapCommandMap so that we support custom DataContentHandlers
now.

fixed a bug in the Attachment handling where an incorrectly-formed encoding
would lead to a NullPointerException.

modified the loading of table display infos so that we now don't fail 
totally if a particular field gets an exception.

added a search/filter for arbitrary message headers.

if a folder becomes disconnected, we now pre-emptively check the store to
see if it's connected.

030613 release
--------------
fixed a bug where reopening a pop folder could result in a StackOverflowError.

fixed a bug in the new acount configuration (and AddressBookManager) that 
resulted in being unable to send mail or edit the AddressBook on the first 
startup.

fixed some more cache synchronization bugs in disconnected mode.

backend filters are now run on all new messages, not just messages that
are added while connected.

030530 release
--------------

fixed a few cache synchronization bugs in disconnected mode.

we now show from addresses even if they aren't correctly formatted.

fixed a bug where cached messages wouldn't show incorrectly identified
'7-bit' encoded messages.

disconnected imap now caches message flags correctly.

added a hack way to override errors like a MissingStartBoundary.

keybindings now work in preview pane mode with the preview panel selected.

fixed a deadlock in FolderInfo.copyMessages().

made opening folders in the background the default.

removed the old code that messed with the scroll move during internal pane
moves.  should be all ok under jdk 1.4.

fixed a bug where unsubscribing to the last subfolder of a folder doesn't
work.

modified the MessageProxy class so that we don't create lots and lots of
unnecessary actions.

fixed a couple of memory leaks
