@@ -500,6 +500,8 @@ Pooka.crypto.privateKey.forSig=Select key to sign this message.
 Pooka.crypto.passphrase.title=Enter Passphrase
 Pooka.crypto.passphrase.message=Enter Passphrase for key \n
 
+Pooka.crypto.encryptedMessage=******  This is an encrypted message.  Click on the 'encryption' button or go to Encrypt->Decrypt message to read it. ******
+
 AddressBook.editableFields.editor.config.label=Configuration
 AddressBook.editableFields.type.label=Type
 AddressBook.editableFields.edit.label=AddressBook Configuration
