@@ -2,6 +2,8 @@
 features:
   show status:  encrypted/unchecked, unencrypted, not encrypted
 	        signed/unchecked, signed/failed, signed/checked, encrypted
+  mutt:   [-- the following data is signed --] [-- end of signed data --]
+  mozila:  key, click on it and it gives you status.  good idea!
   pgp&smime encrypt, decrypt, sign, check sig, sign&encrypt
     check signature with default key(s)
     check signature with selected key(s)
@@ -55,6 +57,7 @@ bugs:
 
 *) fix error in encoded stream problem.
 	-- just better error (?)  or maybe print out as far as it goes.
+	-- see pooka_problems from plc
 
 *) bounce messages
 
@@ -70,9 +73,12 @@ bugs:
 *) some case(s) in which we're not generating the attachment bundle 
 	correctly?  one instance is how we're handling multipart/alternative
 	entries that don't actually have multiple parts.
+	soo pooka_problems blob
 
 *) still an error in connecting, disconnecting, getting a new messages/deleting
 	old messages, reconnecting.
+
+*) html with text attachment should show text attachment at the end. (??)
 
 *) start up disconnected.  connect.  have filters.  get error:
 javax.mail.MessagingException: Error:  could not copy messages to folder:  net.suberic.pooka.cache.CachingFolderInfo@1e081c5
